Desktop/microservices-reto4/terraform-microservices/k8s/00-namespace.yaml
---
# k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    name: microservices
    env: prod
